# internal/zikr/port/http/docs/swagger.json
@@ -5,46 +5,6 @@
         "contact": {}
     },
     "paths": {
-        "/v1/create": {
-            "post": {
-                "description": "This api can create new zikr",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Zikr"
-                ],
-                "summary": "Create zikr",
-                "parameters": [
-                    {
-                        "description": "Create",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Zikr"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Id"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/delete": {
             "delete": {
                 "description": "This api can delete zikr",
@@ -233,6 +193,46 @@
                         "in": "query",
                         "required": true
                     },
+                    {
+                        "description": "Create",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Zikr"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Id"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/zikr/create": {
+            "post": {
+                "description": "This api can create new zikr",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Zikr"
+                ],
+                "summary": "Create zikr",
+                "parameters": [
                     {
                         "description": "Create",
                         "name": "body",
